<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/cloudBurst"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/gainSbroro"
        android:textSize="@dimen/sp26"
        android:layout_marginTop="@dimen/dp30"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:textColor="@color/warmGrey"
        android:textColorHint="@color/warmGrey"
        android:background="@color/seashell"
        android:paddingStart="@dimen/dp18"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/dp200"
        android:layout_below="@id/sign_up"
        android:layout_centerHorizontal="true"
        android:id="@+id/first_name"
        android:textSize="@dimen/sp12"
        android:layout_width="@dimen/dp340"
        android:layout_height="@dimen/dp50"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:textColor="@color/warmGrey"
        android:textColorHint="@color/warmGrey"
        android:background="@color/seashell"
        android:paddingStart="@dimen/dp18"
        android:hint="@string/last_name"
        android:layout_marginTop="@dimen/dp20"
        android:layout_below="@id/first_name"
        android:layout_centerHorizontal="true"
        android:id="@+id/last_name"
        android:textSize="@dimen/sp12"
        android:layout_width="@dimen/dp340"
        android:layout_height="@dimen/dp50"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""
        android:inputType="text"/>

    <EditText
        android:inputType="textEmailAddress"
        android:textColor="@color/warmGrey"
        android:textColorHint="@color/warmGrey"
        android:background="@color/seashell"
        android:paddingStart="@dimen/dp18"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/dp20"
        android:layout_below="@id/last_name"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_sign_up"
        android:textSize="@dimen/sp12"
        android:layout_width="@dimen/dp340"
        android:layout_height="@dimen/dp50"
        tools:ignore="RtlSymmetry,TextFields" 
        android:autofillHints="" />

    <EditText
        android:textColor="@color/warmGrey"
        android:textColorHint="@color/warmGrey"
        android:background="@color/seashell"
        android:paddingStart="@dimen/dp18"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/dp20"
        android:layout_below="@id/email_sign_up"
        android:layout_centerHorizontal="true"
        android:id="@+id/password_sign_up"
        android:textSize="@dimen/sp12"
        android:layout_width="@dimen/dp340"
        android:layout_height="@dimen/dp50"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:layout_below="@id/password_sign_up"
        android:textSize="@dimen/sp12"
        android:fontFamily="sans-serif"
        android:textColor="@color/gainSbroro"
        android:background="@drawable/sign_in_box"
        android:id="@+id/sign_up_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button" />

    <TextView
        android:id="@+id/first_name_error"
        android:textSize="@dimen/sp10"
        android:textColor="@color/cinnabar"
        android:layout_marginStart="@dimen/dp40"
        android:layout_below="@id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/last_name_error"
        android:textSize="@dimen/sp10"
        android:textColor="@color/cinnabar"
        android:layout_marginStart="@dimen/dp40"
        android:layout_below="@id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email_error"
        android:textSize="@dimen/sp10"
        android:textColor="@color/cinnabar"
        android:layout_marginStart="@dimen/dp40"
        android:layout_below="@id/email_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_error"
        android:textSize="@dimen/sp10"
        android:textColor="@color/cinnabar"
        android:layout_marginStart="@dimen/dp40"
        android:layout_below="@id/password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>