<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cloudBurst"
    tools:context=".SignUpScreen">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp84"
        android:layout_marginEnd="@dimen/dp84"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_logon" />

    <TextView
        android:layout_marginTop="@dimen/dp25"
        android:fontFamily="serif-monospace"
        android:textColor="@color/paleOyster"
        android:textSize="@dimen/sp10"
        app:layout_constraintTop_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writer" />

    <TextView
        android:id="@+id/writer_name"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/sp15"
        android:textColor="@color/paleOyster"
        android:text="@string/write_name"
        android:layout_marginTop="@dimen/dp7"
        app:layout_constraintTop_toBottomOf="@id/writer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>